# CPosixThreads

./: .gitignore  CMakeLists.txt
task1/src/: main.c
task10/src/: main.c
task12/src/: main.c
task13/: Makefile
task13/src/: main.c
task2/src/: main.c
task22/src/: main.c
task3/: Makefile
task3/src/: main.c
task4/src/: main.c
task5/src/: main.c
task7/: Makefile
task7/include/: helpers.h
task7/src/: helpers.c  main.c
task8/include/: helpers.h
task8/src/: helpers.c  main.c
task9/include/: dinner.h
task9/src/: dinner.c  main.c
util/: Makefile
util/headers/: err_check.h  stack.h
util/include/: bubble_sort.h  err_check.h  list.h  parse.h  usage.h
util/src/: bubble_sort.c  err_check.c  list.c  parse.c  stack.c  usage.c
